[project]
name = "TotalFitnesBooker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Denys", email = "denmen133@gmail.com"},
]
dependencies = ["selenium>=4.32.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
